Fix faculty mentor login password field alignment

--- a/app/faculty-mentor/login/faculty-mentor-login.module.css
+++ b/app/faculty-mentor/login/faculty-mentor-login.module.css
@@ -104,6 +104,8 @@
   transition: all 0.2s;
   background-color: white;
   color: #1f2937;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .passwordWrapper input {
